Integrate with composer and Bref for Lambda integration

--- a/README
+++ b/README
@@ -1,3 +1,20 @@
+# Building
+- Install PHP 7.2
+- Install [Composer](https://getcomposer.org), the PHP package mangement tool
+- Run `composer install` to generate the `./vendor` folder with all the dependencies.
+- Run the build scripts in the root of the project.
+```
+./run_build # Lambda zip will be under ./build/lambda.zip
+./run_server # Local server
+```
+
+# Dependencies
+
+### PHP Lambda Integration
+- https://bref.sh
+- Lambda layer: arn:aws:lambda:us-east-1:209497400698:layer:php-73:7
+
+# Old docs
 Pages
  -index.php (contains display and noDisplay)
   +noDisplay is the homepage
@@ -13,7 +30,7 @@ Special Files
  -external-image.php (for handling upload from url)
  -tempImg.php (for handling images for browsers that don't support FileReader
 
-Resource Files [Ought to be moved to php/manage-*.php]
+Resource Files [Ought to be moved to `php/manage-*.php`]
  -login.php (handles user credential stuff)
  -access.php (handles zoomography stuff)
 
